--- a/debian/nvidia-opencl-icd.lintian-overrides.in
+++ b/debian/nvidia-opencl-icd.lintian-overrides.in
@@ -1,5 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: binary-file-built-without-LFS-support
+embedded-library usr/lib*/libnvidia-opencl.so.#VERSION#: zlib
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 [i386]: spelling-error-in-binary
