ship nvidia-persistenced init script templates as examples
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4467 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -87,6 +87,8 @@ NVIDIA-Linux-%:
 	test -d $@/kernel || \
 		mv $@/usr/src/nv $@/kernel
 	-gunzip $@/*.1.gz
+	test ! -f $@/nvidia-persistenced-init.tar.bz2 || \
+		tar xfvj $@/nvidia-persistenced-init.tar.bz2 -C $@
 
 # Unpack all architectures, we may need files from all of them.
 unpack-stamp: $(patsubst %,NVIDIA-Linux-%,$(ARCH_LIST))
