--- a/debian/nvidia-driver.install.in
+++ b/debian/nvidia-driver.install.in
@@ -1,3 +1,4 @@
 nvidia-bug-report.sh	usr/lib/#PRIVATE#/
 nvidia-debugdump	usr/bin/
 nvidia-persistenced	usr/bin/
+nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
