finalize changelog for nvidia-graphics-drivers (319.60-3)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4469 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -89,6 +89,8 @@ NVIDIA-Linux-%:
 	-gunzip $@/*.1.gz
 	test ! -f $@/nvidia-persistenced-init.tar.bz2 || \
 		tar xfvj $@/nvidia-persistenced-init.tar.bz2 -C $@
+	test ! -d $@/nvidia-persistenced-init || \
+		chmod -R a-sx,u=rwX,go=rX $@/nvidia-persistenced-init
 
 # Unpack all architectures, we may need files from all of them.
 unpack-stamp: $(patsubst %,NVIDIA-Linux-%,$(ARCH_LIST))
