libcuda1: add Provides: libcuda-5.5-1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/331@4493 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -345,6 +345,7 @@ Replaces:
  libcuda1-ia32,
 Provides:
  libcuda-5.0-1,
+ libcuda-5.5-1,
 Homepage: http://www.nvidia.com/CUDA
 Description: NVIDIA CUDA runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
