--- a/debian/control
+++ b/debian/control
@@ -415,6 +415,7 @@ Depends:
 Recommends:
  ${nvidia:kmod:binary},
  nvidia-smi,
+ libcuda1-i386 [amd64],
 Suggests:
  nvidia-cuda-mps,
  ${nvidia:kmod:source},
@@ -438,6 +439,17 @@ Description: NVIDIA CUDA runtime library
  series, as well as the Tesla computing processors.
  .
  ${nvidia:kmod:Description}
+
+Package: libcuda1-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ libcuda1,
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
+ library when installing libcuda1 on amd64 with foreign architecture i386
+ enabled.
 
 Package: libnvidia-compiler
 Architecture: i386 amd64
