--- a/debian/control
+++ b/debian/control
@@ -359,6 +359,17 @@ Description: NVIDIA CUDA runtime library
  .
  ${nvidia:kmod:Description}
 
+Package: libcuda1-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ libcuda1,
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
+ library when installing libcuda1 on amd64 with foreign architecture i386
+ enabled.
+
 Package: libnvidia-compiler
 Architecture: i386 amd64
 Multi-Arch: same
