update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-wheezy@4617 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-opencl-icd.lintian-overrides.in
+++ b/debian/nvidia-opencl-icd.lintian-overrides.in
@@ -1,6 +1,8 @@
 # The NVIDIA license does not allow any form of modification.
+[!amd64]: binary-file-built-without-LFS-support
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
+[i386]: spelling-error-in-binary
 unstripped-binary-or-object
 hardening-no-fortify-functions
 hardening-no-relro
