--- a/debian/xserver-xorg-video-nvidia.lintian-overrides.in
+++ b/debian/xserver-xorg-video-nvidia.lintian-overrides.in
@@ -1,4 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
+[!amd64]: binary-file-built-without-LFS-support
 embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: zlib
 embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: libpng
 hardening-no-fortify-functions
