denote wheezy and xserver 1.12 as current
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-wheezy@4627 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.README.Debian.in
+++ b/debian/nvidia-glx.README.Debian.in
@@ -17,8 +17,8 @@ NOTES ABOUT GLX DRIVER AND OPENGL:
 
 Using the nvidia X driver requires some user modification.
 
-The current X Server 1.7 can autodetect many things, so you probably don't
-have a /etc/X11/xorg.conf at all after a fresh installation of Debian squeeze
+The current X Server 1.12 can autodetect many things, so you probably don't
+have a /etc/X11/xorg.conf at all after a fresh installation of Debian wheezy
 or a newer release.
 
 The NVIDIA driver is not autodetected by Xorg, so you will have to create a
