update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/337@4726 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.symbols.in
+++ b/debian/libgl1-nvidia-glx.symbols.in
@@ -2,6 +2,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glAccum@Base 1.0.4349
  glActiveProgramEXT@Base 190
  glActiveShaderProgram@Base 260
+ glActiveShaderProgramEXT@Base 334
  glActiveStencilFaceEXT@Base 1.0.4349
  glActiveTexture@Base 1.0.4349
  glActiveTextureARB@Base 1.0.4349
@@ -53,6 +54,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glBindProgramARB@Base 1.0.4349
  glBindProgramNV@Base 1.0.4349
  glBindProgramPipeline@Base 260
+ glBindProgramPipelineEXT@Base 334
  glBindRenderbuffer@Base 180
  glBindRenderbufferEXT@Base 1.0.7664
  glBindRenderbufferOES@Base 325
@@ -93,6 +95,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glBlendParameteriNV@Base 310
  glBlitFramebuffer@Base 180
  glBlitFramebufferEXT@Base 1.0.9625
+ glBlitFramebufferNV@Base 334
  glBufferAddressRangeNV@Base 185
  glBufferData@Base 1.0.6106
  glBufferDataARB@Base 1.0.4349
@@ -275,16 +278,20 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glCreateShaderObjectARB@Base 1.0.6106
  glCreateShaderProgramEXT@Base 190
  glCreateShaderProgramv@Base 260
+ glCreateShaderProgramvEXT@Base 334
  glCullFace@Base 1.0.4349
  glDebugControlNVX@Base 177
  glDebugMessageCallback@Base 310
  glDebugMessageCallbackARB@Base 260
+ glDebugMessageCallbackKHR@Base 334
  glDebugMessageCallbackOES@Base 310
  glDebugMessageControl@Base 310
  glDebugMessageControlARB@Base 260
+ glDebugMessageControlKHR@Base 334
  glDebugMessageControlOES@Base 310
  glDebugMessageInsert@Base 310
  glDebugMessageInsertARB@Base 260
+ glDebugMessageInsertKHR@Base 334
  glDebugMessageInsertOES@Base 310
  glDeleteBuffers@Base 1.0.6106
  glDeleteBuffersARB@Base 1.0.4349
@@ -299,6 +306,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glDeletePathsNV@Base 275
  glDeleteProgram@Base 1.0.7664
  glDeleteProgramPipelines@Base 260
+ glDeleteProgramPipelinesEXT@Base 334
  glDeleteProgramsARB@Base 1.0.4349
  glDeleteProgramsNV@Base 1.0.4349
  glDeleteQueries@Base 1.0.6106
@@ -498,6 +506,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGenOcclusionQueriesNV@Base 1.0.4349
  glGenPathsNV@Base 275
  glGenProgramPipelines@Base 260
+ glGenProgramPipelinesEXT@Base 334
  glGenProgramsARB@Base 1.0.4349
  glGenProgramsNV@Base 1.0.4349
  glGenQueries@Base 1.0.6106
@@ -573,6 +582,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetConvolutionParameteriv@Base 1.0.4349
  glGetDebugMessageLog@Base 310
  glGetDebugMessageLogARB@Base 260
+ glGetDebugMessageLogKHR@Base 334
  glGetDebugMessageLogOES@Base 310
  glGetDoubleIndexedvEXT@Base 180
  glGetDoublei_v@Base 260
@@ -596,6 +606,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetFramebufferParameteriv@Base 310
  glGetFramebufferParameterivEXT@Base 180
  glGetGraphicsResetStatusARB@Base 260
+ glGetGraphicsResetStatusEXT@Base 334
  glGetHandleARB@Base 1.0.6106
  glGetHistogram@Base 1.0.4349
  glGetHistogramParameterfv@Base 1.0.4349
@@ -655,10 +666,13 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetNamedStringARB@Base 270
  glGetNamedStringivARB@Base 270
  glGetObjectLabel@Base 310
+ glGetObjectLabelEXT@Base 334
+ glGetObjectLabelKHR@Base 334
  glGetObjectLabelOES@Base 310
  glGetObjectParameterfvARB@Base 1.0.6106
  glGetObjectParameterivARB@Base 1.0.6106
  glGetObjectPtrLabel@Base 310
+ glGetObjectPtrLabelKHR@Base 334
  glGetObjectPtrLabelOES@Base 310
  glGetOcclusionQueryivNV@Base 1.0.4349
  glGetOcclusionQueryuivNV@Base 1.0.4349
@@ -682,6 +696,8 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetPointeri_vEXT@Base 185
  glGetPointerv@Base 1.0.4349
  glGetPointervEXT@Base 1.0.4349
+ glGetPointervKHR@Base 334
+ glGetPointervOES@Base 334
  glGetPolygonStipple@Base 1.0.4349
  glGetProgramBinary@Base 260
  glGetProgramBinaryOES@Base 270
@@ -700,7 +716,9 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetProgramParameterdvNV@Base 1.0.4349
  glGetProgramParameterfvNV@Base 1.0.4349
  glGetProgramPipelineInfoLog@Base 260
+ glGetProgramPipelineInfoLogEXT@Base 334
  glGetProgramPipelineiv@Base 260
+ glGetProgramPipelineivEXT@Base 334
  glGetProgramResourceIndex@Base 310
  glGetProgramResourceLocation@Base 310
  glGetProgramResourceLocationIndex@Base 310
@@ -757,7 +775,10 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetTexEnvxv@Base 302
  glGetTexGendv@Base 1.0.4349
  glGetTexGenfv@Base 1.0.4349
+ glGetTexGenfvOES@Base 334
  glGetTexGeniv@Base 1.0.4349
+ glGetTexGenivOES@Base 334
+ glGetTexGenxvOES@Base 334
  glGetTexImage@Base 1.0.4349
  glGetTexImageNV@Base 270
  glGetTexLevelParameterfv@Base 1.0.4349
@@ -852,7 +873,9 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetnTexImageARB@Base 260
  glGetnUniformdvARB@Base 260
  glGetnUniformfvARB@Base 260
+ glGetnUniformfvEXT@Base 334
  glGetnUniformivARB@Base 260
+ glGetnUniformivEXT@Base 334
  glGetnUniformuivARB@Base 260
  glGpuSyncAcquireNVX@Base 1.0.9625
  glGpuSyncCreateNVX@Base 190
@@ -907,6 +930,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glIsProgramARB@Base 1.0.4349
  glIsProgramNV@Base 1.0.4349
  glIsProgramPipeline@Base 260
+ glIsProgramPipelineEXT@Base 334
  glIsQuery@Base 1.0.6106
  glIsQueryARB@Base 1.0.5328
  glIsQueryEXT@Base 331
@@ -926,6 +950,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glIsTransformFeedbackNV@Base 165
  glIsVertexArray@Base 180
  glIsVertexArrayOES@Base 270
+ glLabelObjectEXT@Base 334
  glLightModelf@Base 1.0.4349
  glLightModelfv@Base 1.0.4349
  glLightModeli@Base 1.0.4349
@@ -992,12 +1017,18 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glMaterialx@Base 302
  glMaterialxv@Base 302
  glMatrixFrustumEXT@Base 180
+ glMatrixLoad3x2fNV@Base 334
+ glMatrixLoad3x3fNV@Base 334
  glMatrixLoadIdentityEXT@Base 180
+ glMatrixLoadTranspose3x3fNV@Base 334
  glMatrixLoadTransposedEXT@Base 180
  glMatrixLoadTransposefEXT@Base 180
  glMatrixLoaddEXT@Base 180
  glMatrixLoadfEXT@Base 180
  glMatrixMode@Base 1.0.4349
+ glMatrixMult3x2fNV@Base 334
+ glMatrixMult3x3fNV@Base 334
+ glMatrixMultTranspose3x3fNV@Base 334
  glMatrixMultTransposedEXT@Base 180
  glMatrixMultTransposefEXT@Base 180
  glMatrixMultdEXT@Base 180
@@ -1199,8 +1230,10 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glNormalPointer@Base 1.0.4349
  glNormalPointerEXT@Base 1.0.4349
  glObjectLabel@Base 310
+ glObjectLabelKHR@Base 334
  glObjectLabelOES@Base 310
  glObjectPtrLabel@Base 310
+ glObjectPtrLabelKHR@Base 334
  glObjectPtrLabelOES@Base 310
  glOrtho@Base 1.0.4349
  glOrthof@Base 302
@@ -1216,6 +1249,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glPathCoverDepthFuncNV@Base 275
  glPathDashArrayNV@Base 275
  glPathFogGenNV@Base 275
+ glPathGlyphIndexRangeNV@Base 334
  glPathGlyphRangeNV@Base 275
  glPathGlyphsNV@Base 275
  glPathParameterfNV@Base 275
@@ -1263,6 +1297,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glPopAttrib@Base 1.0.4349
  glPopClientAttrib@Base 1.0.4349
  glPopDebugGroup@Base 310
+ glPopDebugGroupKHR@Base 334
  glPopDebugGroupOES@Base 310
  glPopMatrix@Base 1.0.4349
  glPopName@Base 1.0.4349
@@ -1445,6 +1480,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glPushClientAttrib@Base 1.0.4349
  glPushClientAttribDefaultEXT@Base 180
  glPushDebugGroup@Base 310
+ glPushDebugGroupKHR@Base 334
  glPushDebugGroupOES@Base 310
  glPushMatrix@Base 1.0.4349
  glPushName@Base 1.0.4349
@@ -1478,6 +1514,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glReadBufferNV@Base 270
  glReadPixels@Base 1.0.4349
  glReadnPixelsARB@Base 260
+ glReadnPixelsEXT@Base 334
  glRectd@Base 1.0.4349
  glRectdv@Base 1.0.4349
  glRectf@Base 1.0.4349
@@ -1583,6 +1620,10 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glStencilOpSeparate@Base 1.0.7664
  glStencilStrokePathInstancedNV@Base 275
  glStencilStrokePathNV@Base 275
+ glStencilThenCoverFillPathInstancedNV@Base 334
+ glStencilThenCoverFillPathNV@Base 334
+ glStencilThenCoverStrokePathInstancedNV@Base 334
+ glStencilThenCoverStrokePathNV@Base 334
  glTestFenceNV@Base 1.0.4349
  glTexBuffer@Base 190
  glTexBufferARB@Base 180
@@ -1648,9 +1689,15 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glTexGend@Base 1.0.4349
  glTexGendv@Base 1.0.4349
  glTexGenf@Base 1.0.4349
+ glTexGenfOES@Base 334
  glTexGenfv@Base 1.0.4349
+ glTexGenfvOES@Base 334
  glTexGeni@Base 1.0.4349
+ glTexGeniOES@Base 334
  glTexGeniv@Base 1.0.4349
+ glTexGenivOES@Base 334
+ glTexGenxOES@Base 334
+ glTexGenxvOES@Base 334
  glTexImage1D@Base 1.0.4349
  glTexImage2D@Base 1.0.4349
  glTexImage2DMultisample@Base 190.18.05
@@ -1806,22 +1853,28 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glUniformMatrix2fvARB@Base 1.0.6106
  glUniformMatrix2x3dv@Base 256
  glUniformMatrix2x3fv@Base 1.0.9625
+ glUniformMatrix2x3fvNV@Base 334
  glUniformMatrix2x4dv@Base 256
  glUniformMatrix2x4fv@Base 1.0.9625
+ glUniformMatrix2x4fvNV@Base 334
  glUniformMatrix3dv@Base 256
  glUniformMatrix3fv@Base 1.0.7664
  glUniformMatrix3fvARB@Base 1.0.6106
  glUniformMatrix3x2dv@Base 256
  glUniformMatrix3x2fv@Base 1.0.9625
+ glUniformMatrix3x2fvNV@Base 334
  glUniformMatrix3x4dv@Base 256
  glUniformMatrix3x4fv@Base 1.0.9625
+ glUniformMatrix3x4fvNV@Base 334
  glUniformMatrix4dv@Base 256
  glUniformMatrix4fv@Base 1.0.7664
  glUniformMatrix4fvARB@Base 1.0.6106
  glUniformMatrix4x2dv@Base 256
  glUniformMatrix4x2fv@Base 1.0.9625
+ glUniformMatrix4x2fvNV@Base 334
  glUniformMatrix4x3dv@Base 256
  glUniformMatrix4x3fv@Base 1.0.9625
+ glUniformMatrix4x3fvNV@Base 334
  glUniformSubroutinesuiv@Base 256
  glUniformui64NV@Base 185
  glUniformui64vNV@Base 185
@@ -1833,6 +1886,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glUseProgram@Base 1.0.7664
  glUseProgramObjectARB@Base 1.0.6106
  glUseProgramStages@Base 260
+ glUseProgramStagesEXT@Base 334
  glUseShaderProgramEXT@Base 190
  glVDPAUFiniNV@Base 256
  glVDPAUGetSurfaceivNV@Base 256
@@ -1848,6 +1902,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glValidateProgram@Base 1.0.7664
  glValidateProgramARB@Base 1.0.6106
  glValidateProgramPipeline@Base 260
+ glValidateProgramPipelineEXT@Base 334
  glVertex2d@Base 1.0.4349
  glVertex2dv@Base 1.0.4349
  glVertex2f@Base 1.0.4349
