build the EGL/GLES packages for amd64, too
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/337@4727 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -151,7 +151,7 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
 
 #Package: libegl1-${nvidia}
 Package: libegl1-nvidia
-Architecture: i386 armhf
+Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -169,7 +169,7 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
 
 #Package: libgles1-${nvidia}
 Package: libgles1-nvidia
-Architecture: i386 armhf
+Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -190,7 +190,7 @@ Description: NVIDIA binary OpenGL|ES 1.x libraries${nvidia:LegacyDesc}
 
 #Package: libgles2-${nvidia}
 Package: libgles2-nvidia
-Architecture: i386 armhf
+Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -211,7 +211,7 @@ Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
 
 Package: libnvidia-eglcore
-Architecture: i386 armhf
+Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
