build the nvidia-uvm kernel module
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4743 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/Makefile
+++ b/debian/module/Makefile
@@ -24,7 +24,7 @@ ifndef NV_VERBOSE
 endif
 
 KBUILD_PARAMS += KBUILD_VERBOSE=$(NV_VERBOSE)
-KBUILD_PARAMS += -C $(KERNEL_SOURCES) M=$(PWD)
+KBUILD_PARAMS += -C $(KERNEL_SOURCES) M=$(CURDIR)
 
 
 default: modules
