--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -27,6 +27,10 @@ export KSRC
 export KVERS
 export KPKG_DEST_DIR
 
+ifneq (,$(wildcard uvm))
+    WITH_UVM	 = 1
+endif
+
 configure: configure-stamp
 configure-stamp:
 	@if [ x"$(KVERS)" = x ] ; then \
@@ -44,6 +48,9 @@ build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
 	$(MAKE) SYSSRC=$(KSRC)
+ifeq (1,$(WITH_UVM))
+	$(MAKE) -C uvm SYSSRC=$(KSRC)
+endif
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
 	touch $@
 
@@ -76,6 +83,9 @@ clean:
 	dh_testdir
 	dh_testroot
 	$(MAKE) SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
+ifeq (1,$(WITH_UVM))
+	$(MAKE) -C uvm SYSSRC=$(KSRC) $(KPKG_EXTRAV_ARG) clean
+endif
 	dh_quilt_unpatch || quilt --quiltrc /dev/null pop -af
 	dh_clean debian/control debian/install
 
