--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -12,3 +12,10 @@ AUTOINSTALL=yes
 MAKE[0]="env CCACHE_DISABLE=1 \
     make -C . SYSSRC=${kernel_source_dir}"
 CLEAN="make -C . SYSSRC=${kernel_source_dir} clean"
+
+BUILT_MODULE_NAME[1]="nvidia-uvm"
+BUILT_MODULE_LOCATION[1]="uvm/"
+DEST_MODULE_LOCATION[1]="/updates/dkms"
+MAKE[0]+="; env CCACHE_DISABLE=1 \
+    make -C uvm SYSSRC=${kernel_source_dir}"
+CLEAN+="; make -C uvm SYSSRC=${kernel_source_dir} clean"
