--- a/debian/rules
+++ b/debian/rules
@@ -186,6 +186,14 @@ build-kernel-source-tree: install-into-tmp
 		mv $(module_source)/Makefile $(module_source)/Kbuild
 	mv $(module_source)/conftest.sh $(module_source)/conftest_nvidia.sh
 
+	# For the nvidia-uvm module.
+	test ! -f $(module_source)/uvm/Makefile || \
+		mv $(module_source)/uvm/Makefile $(module_source)/uvm/Kbuild
+	test ! -d $(module_source)/uvm || \
+		ln -sf ../Makefile $(module_source)/uvm
+	test ! -d $(module_source)/uvm || \
+		ln -sf ../conftest.sh $(module_source)/uvm
+
 	# We may need nv-kernel.o for several architectures to accomodate
 	# all kernel flavors. Use Kbuild-compatible names.
 	rm -f $(module_source)/nv-kernel.o
