--- a/debian/libgl1-nvidia-glx.symbols.in
+++ b/debian/libgl1-nvidia-glx.symbols.in
@@ -7,7 +7,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glActiveTexture@Base 1.0.4349
  glActiveTextureARB@Base 1.0.4349
  glActiveVaryingNV@Base 1.0.9746
- glAddSwapHintRectWIN@Base 1.0.4349
+#MISSING: 337# glAddSwapHintRectWIN@Base 1.0.4349
  glAlphaFunc@Base 1.0.4349
  glAlphaFuncx@Base 302
  glAreProgramsResidentNV@Base 1.0.4349
@@ -74,6 +74,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glBindVideoCaptureStreamBufferNV@Base 190.32
  glBindVideoCaptureStreamTextureNV@Base 190.32
  glBitmap@Base 1.0.4349
+ glBlendBarrierKHR@Base 337
  glBlendBarrierNV@Base 331
  glBlendColor@Base 1.0.4349
  glBlendColorEXT@Base 1.0.4349
@@ -340,6 +341,8 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glDepthRangex@Base 302
  glDetachObjectARB@Base 1.0.6106
  glDetachShader@Base 1.0.7664
+ glDevtoolsCorrelationIdNVX@Base 337
+ glDevtoolsInvokeStreamedCallbackNVX@Base 337
  glDisable@Base 1.0.4349
  glDisableClientState@Base 1.0.4349
  glDisableClientStateIndexedEXT@Base 180
@@ -584,6 +587,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetDebugMessageLogARB@Base 260
  glGetDebugMessageLogKHR@Base 334
  glGetDebugMessageLogOES@Base 310
+ glGetDevtoolsExportTableNVX@Base 337
  glGetDoubleIndexedvEXT@Base 180
  glGetDoublei_v@Base 260
  glGetDoublei_vEXT@Base 185
@@ -1043,9 +1047,11 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glMatrixTranslatedEXT@Base 180
  glMatrixTranslatefEXT@Base 180
  glMemoryBarrier@Base 285
+ glMemoryBarrierByRegion@Base 337
  glMemoryBarrierEXT@Base 195
  glMinSampleShading@Base 256
  glMinSampleShadingARB@Base 190.18.05
+ glMinSampleShadingOES@Base 337
  glMinmax@Base 1.0.4349
  glMultMatrixd@Base 1.0.4349
  glMultMatrixf@Base 1.0.4349
@@ -1728,6 +1734,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glTexStorage3D@Base 285
  glTexStorage3DEXT@Base 285
  glTexStorage3DMultisample@Base 310
+ glTexStorage3DMultisampleOES@Base 337
  glTexSubImage1D@Base 1.0.4349
  glTexSubImage2D@Base 1.0.4349
  glTexSubImage3D@Base 1.0.4349
@@ -2253,6 +2260,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glXCreatePbuffer@Base 1.0.4349
  glXCreatePixmap@Base 1.0.4349
  glXCreateWindow@Base 1.0.4349
+ glXDelayBeforeSwapNV@Base 337
  glXDestroyContext@Base 1.0.4349
  glXDestroyGLXPbufferSGIX@Base 1.0.4349
  glXDestroyGLXPixmap@Base 1.0.4349
